--- a/04_helloworld/package.json
+++ b/04_helloworld/package.json
@@ -1,6 +1,16 @@
 {
   "devDependencies": {
     "@babylonjs/core": "^5.54.0",
-    "@babylonjs/inspector": "^5.54.0"
+    "@babylonjs/inspector": "^5.54.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
+  },
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server --port 8080"
   }
 }
